Mobile Overflow Fix Attempt 2

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -112,6 +112,9 @@ progress::-webkit-progress-bar {
 .cup-hover :nth-child(1):hover {
     filter: brightness(1.2);
 }
-body {
+html, body {
     overflow-x: hidden;
+}
+div#root {
+  overflow: hidden;
 }
