--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,3 @@
 * {
   font-family: Lato, sans-serif;
 }
-
-#root {
-  overflow: hidden;
-}
